# azimuth-hs

./: .gitignore  .travis.yml  CHANGELOG  README.md  azimuth-hs.cabal  default.nix  release.nix  shell.nix  urbit-azimuth.cabal
haskell/urbit-azimuth/: ecliptic.json  urbit-azimuth.cabal
haskell/urbit-azimuth/lib/Urbit/: Azimuth.hs
haskell/urbit-azimuth/lib/Urbit/Azimuth/: Contract.hs  Ecliptic.hs
lib/Network/Web3/Provider/: Extended.hs
lib/Urbit/: Azimuth.hs
lib/Urbit/Azimuth/: Account.hs  Azimuth.hs  Contract.hs  Ecliptic.hs  Point.hs  Transaction.hs
lib/Urbit/Azimuth/Azimuth/: Internal.hs
lib/Urbit/Azimuth/Ecliptic/: Internal.hs
lib/Urbit/Ob/: Extended.hs
nix/: nixpkgs.nix  sources.json
test/: Doc.hs  Main.hs
