cabal-version: 2.4
name:          urbit-azimuth
version:       0.1.0.0
synopsis:      Urbit Azimuth Ethereum Contract
homepage:      https://github.com/urbit/ylem
license:       MIT
license-file:  LICENSE
author:        Brendan Hay
maintainer:    maintainer@brendanhay.nz
copyright:     2020 Brendan Hay
data-files:    azimuth.json

source-repository head
  type:     git
  location: https://github.com/urbit/ylem
  subdir:   haskell/urbit-azimuth

common base
  default-language:   Haskell2010
  ghc-options:
    -Weverything -Wno-missing-local-signatures
    -Wno-missing-import-lists -Wno-safe -Wno-unsafe
    -Wno-monomorphism-restriction -Wno-missed-specialisations
    -Wno-all-missed-specialisations -Wno-star-is-type

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  build-depends:      base >=4.12 && <5

library
  import:          base
  hs-source-dirs:  lib
  build-depends:
    , data-default-class
    , exceptions
    , mtl
    , urbit-hob
    , web3

  exposed-modules:
    Urbit.Azimuth
    Urbit.Azimuth.Contract
